--- a/static/css/index.css
+++ b/static/css/index.css
@@ -132,7 +132,7 @@ section ul i
     body
     {
         font-size: 1rem;
-        /* padding: 5% 1%; */
+        padding: 5% 1%;
     }
     section
     {
